@@ -1,5 +1,8 @@
 2006-08-09  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
 
+    * olive.glade: added Rename dialog
+    * olive/frontend/gtk/rename.py: implemented OliveRename
+    * olive/frontend/gtk/handler.py: added Rename signal handler
     * olive/frontend/gtk/__init__.py: fixed the double-click Bookmarks bug
     * olive/frontend/gtk/move.py: implemented OliveMove
     * olive/frontend/gtk/handler.py: added Move signal handler
